# go-backend/docs/swagger.json
@@ -572,11 +572,11 @@
                 "id": {
                     "type": "integer"
                 },
-                "invitee_id": {
-                    "type": "integer"
+                "invitee_name": {
+                    "type": "string"
                 },
-                "inviter_id": {
-                    "type": "integer"
+                "inviter_name": {
+                    "type": "string"
                 },
                 "project_id": {
                     "type": "integer"
@@ -628,8 +628,8 @@
                 "name": {
                     "type": "string"
                 },
-                "owner_id": {
-                    "type": "integer"
+                "owner_name": {
+                    "type": "string"
                 },
                 "updated_at": {
                     "type": "string"
@@ -677,8 +677,8 @@
                 "title"
             ],
             "properties": {
-                "assignee_id": {
-                    "type": "integer"
+                "assignee_name": {
+                    "type": "string"
                 },
                 "description": {
                     "type": "string"
@@ -695,10 +695,11 @@
         "model.TaskDetails": {
             "type": "object",
             "properties": {
-                "assignee_id": {
-                    "type": "integer"
+                "assignee_name": {
+                    "type": "string"
                 },
                 "deadline": {
+                    "description": "Используем указатель на time.Time",
                     "type": "string"
                 },
                 "description": {
@@ -708,12 +709,14 @@
                     "type": "string"
                 },
                 "end_time": {
+                    "description": "Используем указатель на time.Time",
                     "type": "string"
                 },
                 "id": {
                     "type": "integer"
                 },
                 "start_time": {
+                    "description": "Используем указатель на time.Time",
                     "type": "string"
                 },
                 "status": {
@@ -727,8 +730,8 @@
         "model.TaskUpdateRequest": {
             "type": "object",
             "properties": {
-                "assignee_id": {
-                    "type": "integer"
+                "assignee_name": {
+                    "type": "string"
                 },
                 "deadline": {
                     "type": "string"
